# ChatService

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
client/: ChatClient.cc  ChatClient.h  main.cc
common/: Config.h  Json.cc  Json.h  Protocol.cc  Protocol.h
deploy/: aletheia-chat.nginx  chat-server.service  ecosystem.config.cjs
muduo/: CMakeLists.txt
qt-client/: CMakeLists.txt  README.md
qt-client/src/: AppStyle.cpp  AppStyle.h  ChatClient.cpp  ChatClient.h  ClientConfig.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  MessageBubble.cpp  MessageBubble.h  Protocol.cpp  Protocol.h  main.cpp
server/: CallManager.cc  CallManager.h  ChatServer.cc  ChatServer.h  ChatSession.cc  ChatSession.h  ChatStorage.cc  ChatStorage.h  EchoServer.cc  EchoServer.h  RoomManager.cc  RoomManager.h  ServerMetrics.cc  ServerMetrics.h  UserManager.cc  UserManager.h  main.cc
stress-test/: README.md  run_matrix.py  stress_test.py
tests/: CMakeLists.txt  call_manager_test.cc  config_test.cc  protocol_test.cc
tools/: StressClient.cc
web-client/: app.js  index.html  style.css  webrtc.js
ws-gateway/: .gitignore  config.js  package-lock.json  package.json  server.js
